--- a/src/Assets/Navbar.css
+++ b/src/Assets/Navbar.css
@@ -1,7 +1,7 @@
 .browser-btn{
     background: #3BB77E;
     border: #3BB77E;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     line-height: 44px;
     border-radius: 5px;
     padding: 0 20px;
